# Python_Modules

./: pyproject.toml
module00/ex1/: ft_garden_name.py
module00/ex6/: ft_count_harvest_recursive.py
module01/ex0/: ft_garden_intro.py
module01/ex1/: ft_garden_data.py
module01/ex2/: ft_plant_growth.py
module01/ex3/: ft_plant_factory.py
module01/ex4/: ft_garden_security.py
module01/ex5/: ft_plant_types.py
module01/ex6/: ft_garden_analytics.py
module02/ex0/: ft_first_exception.py
module02/ex1/: ft_raise_exception.py
module02/ex2/: ft_different_errors.py
module02/ex3/: ft_custom_errors.py
module02/ex4/: ft_finally_block.py
module03/ex0/: ft_command_quest.py
module03/ex1/: ft_score_analytics.py
module03/ex2/: ft_coordinate_system.py
module03/ex3/: ft_achievement_tracker.py
module03/ex4/: ft_inventory_system.py
module03/ex5/: ft_data_stream.py
module03/ex6/: ft_data_alchemist.py
module04/ex0/: ft_ancient_text.py
module04/ex1/: ft_archive_creation.py
module04/ex2/: ft_stream_management.py
module04/ex3/: ft_vault_security.py  teste
module05/ex0/: data_processor.py
module05/ex1/: data_stream.py
module05/ex2/: data_pipeline.py
module06/: ft_alembic_2.py  ft_alembic_3.py  ft_alembic_4.py  ft_alembic_5.py  ft_kaboom_0.py  ft_kaboom_1.py  ft_transmutation_0.py  ft_transmutation_1.py  ft_transmutation_2.py
module06/alchemy/: __init__.py  elements.py  potions.py
module07/:  tournament.py  battle.py  capacitor.py  tournament.py
module07/ex0/: __init__.py  creature.py  creaturesTypes.py  (+1 more)
module08/ex1/: loading.py  pyproject.toml
(+22 files in other folders)
