[project]
name = "loading"
version = "0.1.0"
description = "Matrix dependency management exercise"
authors = [
    { name = "Neuza Nascimento" }
]
requires-python = ">=3.10"

dependencies = [
    "pandas==2.2.3",
    "numpy==2.2.2",
    "matplotlib==3.10.2",
]

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"